2005-07-23  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c (INST_DICT_*): stop 2 compiler
	warnings for uninitialised variables. 

2005-07-23  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclExecute.c (TEBC:INST_DICT_INCR_IMM): Fix the
	incrementor to work correctly with wide values.

2005-07-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCompCmds.c (TclCompileDictCmd): First run at a compiler 
	* generic/tclExecute.c (TclExecuteByteCode): for dictionaries.
	Also added an instruction to support 'finally'-like clauses, exposed
	more of the dict guts to the rest of the core, and defined a few
	tests to exercise more obscure parts of the compiler's operation that
	were bugs during development.

2005-07-21  Kevin B. Kenny  <kennykb@acm.org>

	* library/ldAout.tcl (***REMOVED***):	Removed support for ancient
	* unix/configure:			BSD's, IRIX 4, RISCos and
	* unix/Makefile.in:			Ultrix.  Removed two files
	* unix/tcl.m4:				whose code is used only on
	* unix/tclLoadAout.c (***REMOVED***):	those antique platforms.

	***POTENTIAL INCOMPATIBILITY*** if anyone actually uses those
	platforms; it is to be noted though, that an error in the
	installer has actually not caused a necessary file to be installed
	on those platforms in several releases, and nobody's complained.
	
2005-07-16  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclStrToD.c (RefineResult):  Plugged a stupid memory
	leak in RefineResult (called from Tcl_StrToD).  [Tk Bug 1227781]
	
2005-07-15  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclClock.c (TclClockLocaltimeObjCmd,ThreadSafeLocalTime):
	* library/clock.tcl (GuessWindowsTimeZone, ClearCaches):
	* tests/clock.test (clock-49.1, clock-49.2):
	Handle correctly the case where localtime() returns NULL to
	report a conversion error.  Also handle the case where the Windows
	registry contains timezone values that can be mapped to a tzdata
	file name but the corresponding file does not exist or is